BAB_Token: Update html, css: uploat: img, Delivatives-dropdown_body-drop_item-drop_clone,demo-BAB_Token-hinh23..

--- a/templates/bab_token.html
+++ b/templates/bab_token.html
@@ -602,10 +602,112 @@
                             </lu>
                         </div>
                         <div class="item-menu">
-                            <div class="item_conten">
-                                <p>Delivatives</p>
-                                <i class="fa fa-caret-down" aria-hidden="true"></i>
-                            </div>
+                            <lu>
+                                <li class="dropdown">
+                                    <a href="" class="drop_text">
+                                        <div class="item_conten">
+                                            <p>Delivatives</p>
+                                            <i class="fa fa-caret-down" aria-hidden="true"></i>
+                                        </div>
+                                    </a>
+                                    <div class="dropdown-content node_size_2">
+                                        <div class="dropdown_body">
+                                            <div class="drop_item">
+                                                <a href="#">
+                                                    <div class="drop_clone">
+                                                        <div class="logo_drop">
+                                                            <img src="../static/img/bab_token/menu_28.png" alt="">
+                                                        </div>
+                                                        <div class="text_drop">
+                                                            <div class="item_conten node_margin node_pading node_space">
+                                                                <div class="head_1">USDⓈ-M Futures</div>
+                                                            </div>
+                                                            <div class="head_1_text">Perpetual or Quarterly Contracts settled in <br> USDT or BUSD</div>
+                                                        </div>
+                                                        <div class="arrow">
+                                                            <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                    <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                            </svg>
+                                                        </div>
+                                                    </div>
+                                                </a>
+                                                <a href="#">
+                                                    <div class="drop_clone">
+                                                        <div class="logo_drop">
+                                                            <img src="../static/img/bab_token/menu_29.png" alt="">
+                                                        </div>
+                                                        <div class="text_drop">
+                                                            <div class="item_conten node_margin node_pading">
+                                                                <div class="head_1">COIN-M Futures</div>
+                                                            </div>
+                                                            <div class="head_1_text">Perpetual or Quarterly Contracts settled in <br> Cryptocurrency</div>
+                                                        </div>
+                                                        <div class="arrow">
+                                                            <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                    <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                            </svg>
+                                                        </div>
+                                                    </div>
+                                                </a>
+                                                <a href="#">
+                                                    <div class="drop_clone">
+                                                        <div class="logo_drop">
+                                                            <img src="../static/img/bab_token/menu_30.png" alt="">
+                                                        </div>
+                                                        <div class="text_drop">
+                                                            <div class="item_conten node_margin node_pading">
+                                                                <div class="head_1">Options</div>
+                                                            </div>
+                                                            <div class="head_1_text">Buy and Sell European-style Options.</div>
+                                                        </div>
+                                                        <div class="arrow">
+                                                            <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                    <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                            </svg>
+                                                        </div>
+                                                    </div>
+                                                </a>
+                                                <a href="#">
+                                                    <div class="drop_clone">
+                                                        <div class="logo_drop">
+                                                            <img src="../static/img/bab_token/menu_31.png" alt="">
+                                                        </div>
+                                                        <div class="text_drop">
+                                                            <div class="item_conten node_margin node_pading">
+                                                                <div class="head_1">Leveraged Tokens</div>
+                                                            </div>
+                                                            <div class="head_1_text">Enjoy increased leverage without risk of <br> liquidation</div>
+                                                        </div>
+                                                        <div class="arrow">
+                                                            <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                    <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                            </svg>
+                                                        </div>
+                                                    </div>
+                                                </a>
+                                                <a href="#">
+                                                    <div class="drop_clone">
+                                                        <div class="logo_drop">
+                                                            <img src="../static/img/bab_token/menu_32.png" alt="">
+                                                        </div>
+                                                        <div class="text_drop">
+                                                            <div class="item_conten node_margin node_pading">
+                                                                <div class="head_1">Leaderboard</div>
+                                                            </div>
+                                                            <div class="head_1_text">Exclusive ranking for Binance traders, follow <br> top traders' strategies</div>
+                                                        </div>
+                                                        <div class="arrow">
+                                                            <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                    <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                            </svg>
+                                                        </div>
+                                                    </div>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                            </lu>
                         </div>
                         <div class="item-menu">
                             <div class="item_conten">
