BAB_Token: Update html, css: uploat:img, Earn-dropdown_body-drop_item-drop_clone,demo-BAB_Token-hinh25...

--- a/static/css/bab_token.css
+++ b/static/css/bab_token.css
@@ -190,6 +190,14 @@ a {
     z-index: 1100;
 }
 
+.node_size_3 {
+    transform: translate(-310px, 0px);
+    box-sizing: border-box;
+    margin: 0px;
+    min-width: 0px;
+    z-index: 1100;
+}
+
 .dropdown-content {
     display: none;
     position: absolute;
