--- a/templates/bab_token.html
+++ b/templates/bab_token.html
@@ -802,9 +802,131 @@
                             </lu>
                         </div>
                         <div class="item-menu">
-                            <div class="item_conten">
-                                <p>Earn</p>
-                                <i class="fa fa-caret-down" aria-hidden="true"></i></div>
+                            <lu>
+                                <li class="dropdown">
+                                    <a href="" class="drop_text">
+                                        <div class="item_conten">
+                                            <p>Earn</p>
+                                            <i class="fa fa-caret-down" aria-hidden="true"></i>
+                                        </div>
+                                    </a>
+                                    <div class="dropdown-content node_size_3">
+                                        <div class="dropdown_body">
+                                            <div class="drop_item">
+                                                <a href="#">
+                                                    <div class="drop_clone">
+                                                        <div class="logo_drop">
+                                                            <img src="../static/img/bab_token/menu_38.png" alt="">
+                                                        </div>
+                                                        <div class="text_drop">
+                                                            <div class="item_conten node_margin node_pading node_space">
+                                                                <div class="head_1">Binance Earn</div>
+                                                            </div>
+                                                            <div class="head_1_text">One-stop Investment Solution</div>
+                                                        </div>
+                                                        <div class="arrow">
+                                                            <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                    <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                            </svg>
+                                                        </div>
+                                                    </div>
+                                                </a>
+                                                <a href="#">
+                                                    <div class="drop_clone">
+                                                        <div class="logo_drop">
+                                                            <img src="../static/img/bab_token/menu_39.png" alt="">
+                                                        </div>
+                                                        <div class="text_drop">
+                                                            <div class="item_conten node_margin node_pading">
+                                                                <div class="head_1">Simple Earn</div>
+                                                            </div>
+                                                            <div class="head_1_text">Earn daily rewards on your idle tokens</div>
+                                                        </div>
+                                                        <div class="arrow">
+                                                            <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                    <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                            </svg>
+                                                        </div>
+                                                    </div>
+                                                </a>
+                                                <a href="#">
+                                                    <div class="drop_clone">
+                                                        <div class="logo_drop">
+                                                            <img src="../static/img/bab_token/menu_40.png" alt="">
+                                                        </div>
+                                                        <div class="text_drop">
+                                                            <div class="item_conten node_margin node_pading">
+                                                                <div class="head_1">BNB Vault</div>
+                                                            </div>
+                                                            <div class="head_1_text">Earn Multi-benefits with BNB</div>
+                                                        </div>
+                                                        <div class="arrow">
+                                                            <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                    <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                            </svg>
+                                                        </div>
+                                                    </div>
+                                                </a>
+                                                <a href="#">
+                                                    <div class="drop_clone">
+                                                        <div class="logo_drop">
+                                                            <img src="../static/img/bab_token/menu_41.png" alt="">
+                                                        </div>
+                                                        <div class="text_drop">
+                                                            <div class="item_conten node_margin node_pading">
+                                                                <div class="head_1">Liquidity Farming</div>
+                                                            </div>
+                                                            <div class="head_1_text">Add liquidity and earn double</div>
+                                                        </div>
+                                                        <div class="arrow">
+                                                            <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                    <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                            </svg>
+                                                        </div>
+                                                    </div>
+                                                </a>
+                                                <a href="#">
+                                                    <div class="drop_clone">
+                                                        <div class="logo_drop">
+                                                            <img src="../static/img/bab_token/menu_42.png" alt="">
+                                                        </div>
+                                                        <div class="text_drop">
+                                                            <div class="item_conten node_margin node_pading">
+                                                                <div class="head_1">Binance Pool</div>
+                                                            </div>
+                                                            <div class="head_1_text">Mine more rewards by connecting to the pool</div>
+                                                        </div>
+                                                        <div class="arrow">
+                                                            <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                    <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                            </svg>
+                                                        </div>
+                                                    </div>
+                                                </a>
+                                                <a href="#">
+                                                    <div class="drop_clone">
+                                                        <div class="logo_drop">
+                                                            <img src="../static/img/bab_token/menu_43.png" alt="">
+                                                        </div>
+                                                        <div class="text_drop">
+                                                            <div class="item_conten node_margin node_pading node_space">
+                                                                <div class="head_1">Range Bound</div>
+                                                                <div class="vnd" style="margin-bottom: 5px;">NEW</div>
+                                                            </div>
+                                                            <div class="head_1_text">Earn high rewards when the market moves <br> sideways</div>
+                                                        </div>
+                                                        <div class="arrow">
+                                                            <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                    <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                            </svg>
+                                                        </div>
+                                                    </div>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                            </lu>
                         </div>
                         <div class="item-menu">
                             <div class="item_conten">
