BAB_Token: Update html, css: Earn-dropdown_body-drop_item-drop_clone(full),demo-BAB_Token-hinh26...

--- a/templates/bab_token.html
+++ b/templates/bab_token.html
@@ -911,9 +911,102 @@
                                                         <div class="text_drop">
                                                             <div class="item_conten node_margin node_pading node_space">
                                                                 <div class="head_1">Range Bound</div>
-                                                                <div class="vnd" style="margin-bottom: 5px;">NEW</div>
+                                                                <div class="vnd" style="margin-bottom: 5px;">new</div>
                                                             </div>
                                                             <div class="head_1_text">Earn high rewards when the market moves <br> sideways</div>
+                                                        </div>
+                                                        <div class="arrow">
+                                                            <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                    <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                            </svg>
+                                                        </div>
+                                                    </div>
+                                                </a>
+                                            </div>
+                                            <div class="drop_item">
+                                                <a href="#">
+                                                    <div class="drop_clone">
+                                                        <div class="logo_drop">
+                                                            <img src="../static/img/bab_token/menu_8.png" alt="">
+                                                        </div>
+                                                        <div class="text_drop">
+                                                            <div class="item_conten node_margin node_pading node_space">
+                                                                <div class="head_1">Launchpad</div>
+                                                            </div>
+                                                            <div class="head_1_text">Token Launch Platform</div>
+                                                        </div>
+                                                        <div class="arrow">
+                                                            <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                    <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                            </svg>
+                                                        </div>
+                                                    </div>
+                                                </a>
+                                                <a href="#">
+                                                    <div class="drop_clone">
+                                                        <div class="logo_drop">
+                                                            <img src="../static/img/bab_token/menu_44.png" alt="">
+                                                        </div>
+                                                        <div class="text_drop">
+                                                            <div class="item_conten node_margin node_pading">
+                                                                <div class="head_1">DeFi Staking</div>
+                                                            </div>
+                                                            <div class="head_1_text">Easy Access to DeFi Opportunities</div>
+                                                        </div>
+                                                        <div class="arrow">
+                                                            <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                    <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                            </svg>
+                                                        </div>
+                                                    </div>
+                                                </a>
+                                                <a href="#">
+                                                    <div class="drop_clone">
+                                                        <div class="logo_drop">
+                                                            <img src="../static/img/bab_token/menu_45.png" alt="">
+                                                        </div>
+                                                        <div class="text_drop">
+                                                            <div class="item_conten node_margin node_pading">
+                                                                <div class="head_1">Dual Investment</div>
+                                                            </div>
+                                                            <div class="head_1_text">Commit your crypto holdings and enjoy high <br> returns</div>
+                                                        </div>
+                                                        <div class="arrow">
+                                                            <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                    <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                            </svg>
+                                                        </div>
+                                                    </div>
+                                                </a>
+                                                <a href="#">
+                                                    <div class="drop_clone">
+                                                        <div class="logo_drop">
+                                                            <img src="../static/img/bab_token/menu_46.png" alt="">
+                                                        </div>
+                                                        <div class="text_drop">
+                                                            <div class="item_conten node_margin node_pading node_space">
+                                                                <div class="head_1">Auto-Invest</div>
+                                                                <div class="vnd">new</div>
+                                                            </div>
+                                                            <div class="head_1_text">Accumulate crypto on autopilot</div>
+                                                        </div>
+                                                        <div class="arrow">
+                                                            <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                    <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                            </svg>
+                                                        </div>
+                                                    </div>
+                                                </a>
+                                                <a href="#">
+                                                    <div class="drop_clone">
+                                                        <div class="logo_drop">
+                                                            <img src="../static/img/bab_token/menu_47.png" alt="">
+                                                        </div>
+                                                        <div class="text_drop">
+                                                            <div class="item_conten node_margin node_pading">
+                                                                <div class="head_1">ETH Staking</div>
+                                                            </div>
+                                                            <div class="head_1_text">One click staking, rewards paid daily</div>
                                                         </div>
                                                         <div class="arrow">
                                                             <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
